--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ header {
     align-items: center;
     background-color: #f57b42;
     margin: 0 auto;
-    padding: 0px 25px;
+    padding: 0 25px;
 }
 
 .btn-cart {
