переделано на ООП

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 header {
-    height: 35px;
+    height: 55px;
     width: 800px;
     display: flex;
     justify-content: space-between;
@@ -66,11 +66,13 @@ main {
 }
 
 .product-item {
-    outline: 1px solid #d6d6d6;
+    border: 1px solid #d6d6d6;
     width: 150px;
     height: 220px;
     text-align: center;
     transition: 0.3s;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .product-item:hover {
