задание 3 создан объект для наглядности

--- a/_burger/burger.css
+++ b/_burger/burger.css
@@ -1,7 +1,12 @@
 .container {
-    width: 350px;
+    width: 500px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+.info {
+    width: 250px;
+}
+
