--- a/css/main.css
+++ b/css/main.css
@@ -67,12 +67,13 @@ main {
 
 .product-item {
     border: 1px solid #d6d6d6;
-    width: 150px;
-    height: 220px;
+    width: 200px;
+    height: auto;
     text-align: center;
     transition: 0.3s;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    padding-bottom: 15px;
 }
 
 .product-item:hover {
