Сделана 6 домашняя работа

--- a/main_project_comp_full/css/style.css
+++ b/main_project_comp_full/css/style.css
@@ -170,3 +170,26 @@ img {
     border: none;
     border-bottom: 2px solid #fafafa;
 }
+#app {
+    position: relative;
+}
+.error {
+    position: absolute;
+    /*left: 0;*/
+    /*top: 0;*/
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.9);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text-error {
+    height: auto;
+    width: 450px;
+    background-color: #ffffff;
+    text-align: center;
+    padding: 25px;
+    border-radius: 10px;
+}
